--- a/files for admin/CMS Blocks/breeze-footer.html
+++ b/files for admin/CMS Blocks/breeze-footer.html
@@ -273,7 +273,7 @@ getPathName () {
                     />
                     <input
                             type="text"
-                            name="details"
+                            name="message"
                             class="form-contact__input form-contact__input--white"
                             placeholder="About you"
                             required=""
