udate magento-development page

--- a/files for admin/CMS Pages/services/magento-development.html
+++ b/files for admin/CMS Pages/services/magento-development.html
@@ -96,7 +96,7 @@
                             <div class="service-square-item__image">
                                 <img src="{{media url='wysiwyg/Service/magento-development/6.svg'}}" alt="" />
                             </div>
-                            <div class="service-square-item__title h4">Robust Security</div>
+                            <div class="service-square-item__title h4">Robust security</div>
                             <p class="service-square-item__text">Top-5 most secure e-commerce platforms</p>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                 </h2>
                 <p class="preface">
                     Our obsession with technology and excellence, paired with deep ecommerce business knowledge, has earned our
-                    agency a reputation as one of Eastern Europe’s most experienced and technically capable commerce agencies.
+                    agency a reputation as one of Eastern Europe’s most experienced and technically capable web development agencies.
                 </p>
                 <div class="service-single__collapsible">
                     <!-- 1 -->
@@ -176,7 +176,7 @@
                             <span class="font-medium">Follow Magento best practices</span>
                         </h4>
                         <ul class="_list">
-                            <li>Every code line is written dy Code standards</li>
+                            <li>Every code line is written by coding standards</li>
                             <li>Every extensibility is compatible with future Magento updates</li>
                             <li>Minimum custom code with maximum business impact</li>
                         </ul>
@@ -370,7 +370,6 @@
                         t[a] = 1;
                     }
                     for(i in t) this.randomNumbers[this.randomNumbers.length] = ~~i;
-                    console.log(this.randomNumbers);
                     return this.randomNumbers;
 
                   },
